# python-project-template

./: CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
