[project]
name = "project_name"
version = "0.1.0"
description = "Description."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mario Alberto Ponce-Pacheco", email = "map10194@nyu.edu" }
]
license = { text = "MIT" }

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "pre-commit",
]

docs = [
  "sphinx",
  "furo",
  "myst-parser",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
